.gitignore is now working

--- a/.gitignore
+++ b/.gitignore
@@ -1,90 +1,16 @@
+# Eclipse
+.classpath
+.project
+.settings/
 
-target/surefire-reports/failed.png
+# Intellij
+.idea/
+*.iml
+*.iws
 
-.idea/misc.xml
+# Mac
+.DS_Store
 
-target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
-
-target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/createdFiles.lst
-
-target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/inputFiles.lst
-
-target/surefire-reports/bullet_point.png
-
-target/surefire-reports/collapseall.gif
-
-target/surefire-reports/emailable-report.html
-
-target/surefire-reports/firstTestSuite/SmokeTest.html
-
-target/surefire-reports/firstTestSuite/SmokeTest.xml
-
-target/surefire-reports/jquery-1.7.1.min.js
-
-target/surefire-reports/old/firstTestSuite/groups.html
-
-target/surefire-reports/old/index.html
-
-target/surefire-reports/skipped.png
-
-target/surefire-reports/TEST-TestSuite.xml
-
-target/surefire-reports/testng-reports.css
-
-target/surefire-reports/testng-reports.js
-
-target/surefire-reports/testng-results.xml
-
-target/surefire-reports/testng.css
-
-target/surefire-reports/TestSuite.txt
-
-target/test-classes/pak/FirstTest.class
-
-target/test-classes/testng.xml
-
-target/surefire-reports/navigator-bullet.png
-
-.idea/vcs.xml
-
-.idea/workspace.xml
-
-.idea/.name
-
-.idea/compiler.xml
-
-.idea/copyright/profiles_settings.xml
-
-.idea/encodings.xml
-
-.idea/libraries/Maven__com_beust_jcommander_1_27.xml
-
-.idea/libraries/Maven__org_beanshell_bsh_2_0b4.xml
-
-.idea/libraries/Maven__org_testng_testng_6_8_8.xml
-
-.idea/modules.xml
-
-.idea/scopes/scope_settings.xml
-
-target/surefire-reports/index.html
-
-target/surefire-reports/old/firstTestSuite/classes.html
-
-*.html
-
-target/surefire-reports/old/firstTestSuite/SmokeTest.properties
-
-target/surefire-reports/junitreports/TEST-pak.TestSumTest.xml
-
-target/surefire-reports/passed.png
-
-luchkovsky-qs6.iml
-
-target/classes/less3/testSum.class
-
-target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
-
-target/surefire-reports/testng-failed.xml
-
-target/surefire-reports/firstTestSuite/testng-failed.xml
+# Maven
+log/
+target/
